fixing a bunch of junior dev mistakes

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Michael Winser's Portfolio</title>
+    <meta name="keywords" content="Nuxt, React, Developer, Portfolio">
+    <meta name="description"
+      content="Hi there! I'm a web developer with a mission to bring your digital dreams to life!" />
+    <title>Michael Winser, Web Developer</title>
   </head>
   <body>
 
