--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <meta name="description"
       content="Hi there! I'm a web developer with a mission to bring your digital dreams to life!" />
     <title>Michael Winser, Web Developer</title>
+</script>
   </head>
   <body>
 
